<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/push_notification_title">
        <SwitchPreferenceCompat
            app:key="@string/push_notification_key"
            app:defaultValue="false"
            app:title="@string/do_not_Disturb"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/login_header">

        <SwitchPreferenceCompat
            app:key="@string/remember_password_key"
            app:defaultValue="false"
            app:title="@string/login_title" />

        <SwitchPreferenceCompat
            app:dependency="@string/remember_password_key"
            app:key="@string/auto_login_key"
            app:defaultValue="true"
            app:summary="@string/auto_login_summary"
            app:title="@string/auto_login_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/dark_header">

        <SwitchPreferenceCompat
            app:key="@string/dark_mode_key"
            app:defaultValue="true"
            app:title="@string/dark_mode_auto" />

        <ListPreference
            app:entries="@array/dark_entries"
            app:entryValues="@array/dark_values"
            app:key="@string/dark_mode_select_key"
            app:useSimpleSummaryProvider="true"
            app:title="@string/select_manually_title" />
    </PreferenceCategory>

</PreferenceScreen>