<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/baseline_search_white_24"
        android:title="@string/text_label_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/more"
        android:icon="@drawable/baseline_add_white_24"
        android:title="@string/text_label_more"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:icon="@drawable/baseline_group_add_black_24"
                android:title="@string/text_label_add_contacts"
                app:showAsAction="always"/>
            <item
                android:icon="@drawable/baseline_qr_code_scanner_black_24"
                android:title="@string/text_label_add_from_photo"
                app:showAsAction="always"/>
        </menu>

    </item>

</menu>