<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_nva"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.activity.RegisterActivity">

    <ImageView
        android:id="@+id/iv_register_logo"
        android:layout_width="149dp"
        android:layout_height="152dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="@dimen/card_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_register_logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.marlonmafra.android.widget.EditTextPassword
                android:id="@+id/tv_register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_username_register"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textSize="@dimen/input_label"
                app:hidePasswordIcon="@drawable/baseline_account_circle_black_18"
                app:iconPosition="left"
                app:showPasswordIcon="@drawable/baseline_account_circle_black_18" />

            <com.marlonmafra.android.widget.EditTextPassword
                android:id="@+id/tv_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_password_register"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="textPassword"
                android:textSize="@dimen/input_label"
                app:hidePasswordIcon="@drawable/baseline_lock_black_18"
                app:iconPosition="left"
                app:showPasswordIcon="@drawable/baseline_lock_open_black_18" />

            <com.marlonmafra.android.widget.EditTextPassword
                android:id="@+id/tv_register_repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_password_register_2"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="textPassword"
                android:textSize="@dimen/input_label"
                app:hidePasswordIcon="@drawable/baseline_lock_black_18"
                app:iconPosition="left"
                app:showPasswordIcon="@drawable/baseline_lock_open_black_18" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:text="@string/action_register_in_short"
                android:textSize="@dimen/login_label"
                app:layout_constraintVertical_bias="0.2" />

            <ProgressBar
                android:id="@+id/loading_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="invisible"
                app:layout_constraintVertical_bias="0.3" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>